# ilfree

./: bot.py  pyproject.toml  requirements.txt
tgbot/: .gitignore  config-google.json  config.py
tgbot/handlers/groups/: service_messages.py
tgbot/handlers/private/: admin.py  manage_outline_server.py  user.py
tgbot/keyboards/: inline.py
tgbot/middlewares/: dbmiddleware.py
tgbot/misc/: utils.py
tgbot/models/: base.py  outline_server.py  telegram_object.py
tgbot/services/: outline_server_api.py
