[tool.poetry]
name = "ilfree"
version = "0.1.0"
description = ""
authors = ["akm77 <aleksey.kotryakhov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.19"
SQLAlchemy = "^1.4.32"
aioredis = "^2.0.1"
environs = "^9.5.0"
gspread = ">=4.0.0,<4.1.0"
oauth2client = "^4.1.3"
google-api-python-client = "^2.40.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.0"
gspread-asyncio = "^1.5.3"
gspread-formatting = "^1.0.6"
aiosqlite = "^0.17.0"
aiogram-dialog = "^1.5.1"
diagrams = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
